modulo-03-kubernetes/escenarios-practicos/ejercicio_2/03-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ejercicio
spec:
  selector:
    # Se cambia el selector para que busque los pods back -> backend  (kubectl get endpoints -n ejercicio)
    app: backend
  ports:
  - port: 80
    # Se cambia el puerto para que coincida con el de los pods 8080 -> 80 (kubectl get pods backend-xxxxxxxx-zzzz -n ejercicio -o yaml)
    targetPort: 80
